fix table of content overflow

--- a/styles/prism-theme.css
+++ b/styles/prism-theme.css
@@ -1,3 +1,9 @@
+.notion-page-content-has-aside {
+  display: flex;
+  flex-direction: row;
+  width: calc((100vw + var(--notion-max-width)) / 2.1);
+}
+
 .notion-code {
   background-color: #f6f6f2;
   border-radius: 0.375rem;
